Added markdown comments for each task

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -1,30 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Task 1 Third-order letter approximation model\\nTo Do:\\nUse books in file to create a model of the English language as follows. Remove any preamble and postamble.\\nRemove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \\nMake all letters uppercase.\\nCreate a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\\nProcess a specified text to test the trigram model.\\nCreate an output\\n'"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
     }
-   ],
+   },
    "source": [
-    "\"\"\" Task 1 Third-order letter approximation model\n",
-    "To Do:\n",
-    "Use books in file to create a model of the English language as follows. Remove any preamble and postamble.\n",
-    "Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces. \n",
-    "Make all letters uppercase.\n",
-    "Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.\n",
-    "Process a specified text to test the trigram model.\n",
-    "Create an output\n",
+    "\"\"\" ***Task 1 Third-order letter approximation model***  \n",
+    "**To Do:**  \n",
+    "- Use books in file to create a model of the English language as follows. Remove any preamble and postamble.  \n",
+    "- Remove all characters except for (ASCII) letters (uppercase and lowercase), full stops, and spaces.   \n",
+    "- Make all letters uppercase.  \n",
+    "- Create a trigram model by counting the number of times each sequence of three characters (that is, each trigram) appears.  \n",
+    "- Process a specified text to test the trigram model.  \n",
+    "- Create an output.  \n",
     "\"\"\""
    ]
   },
@@ -137,28 +128,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 141,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Task 2: Third-order letter approximation generation\\nTo Do:\\nUse your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \\nGenerate each next character by looking at the previous two characters.\\nFind the trigrams in your model that start with those two characters. \\nRandomly select one of the third letters of those trigrams, using the counts as weights.\\n'"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\" Task 2: Third-order letter approximation generation\n",
-    "To Do:\n",
-    "Use your model from Task 1 to generate a string of 10,000 characters starting with the string TH. \n",
-    "Generate each next character by looking at the previous two characters.\n",
-    "Find the trigrams in your model that start with those two characters. \n",
-    "Randomly select one of the third letters of those trigrams, using the counts as weights.\n",
+    "\"\"\" ***Task 2: Third-order letter approximation generation***  \n",
+    "**To Do:**  \n",
+    "- Use your model from Task 1 to generate a string of 10,000 characters starting with the string TH.  \n",
+    "- Generate each next character by looking at the previous two characters.  \n",
+    "- Find the trigrams in your model that start with those two characters.   \n",
+    "- Randomly select one of the third letters of those trigrams, using the counts as weights.  \n",
     "\"\"\""
    ]
   },
@@ -222,25 +200,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 144,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Task 3: Analyze your model\\nTo Do:\\nUse words.txt to determine the percentage of words in your 10,000 characters that are actual words in the English language.\\n'"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\" Task 3: Analyze your model\n",
-    "To Do:\n",
-    "Use words.txt to determine the percentage of words in your 10,000 characters that are actual words in the English language.\n",
+    "\"\"\" ***Task 3: Analyze your model***  \n",
+    "**To Do:**\n",
+    "- Read words.txt file.  \n",
+    "- Tokenize the words in the file.  \n",
+    "- Count how many of the words are in words.txt.  \n",
+    "- Calculate the percentage of words in words.txt that are in the generated text.  \n",
+    "- Return percentage, total valid english word count, and total word count.  \n",
     "\"\"\""
    ]
   },
