fixed issue in trigrams

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +119,8 @@
     "# You need to provide the path to a specific text file in file_path,\n",
     "# which is passed to preprocess_text() to clean the text and then used to generate the trigram model.\n",
     "\n",
-    "file_path = \"./books/The Odyssey.txt\"  # Specify the path to the text file\n",
-    "trigram_model = process_single_book(file_path)\n",
+    "file_path = \"./books/the_odyssey.txt\"  # Specify the path to the text file\n",
+    "trigram_model = process_book(file_path)\n",
     "\n",
     "# Display some trigrams and their counts\n",
     "for trigram, count in list(trigram_model.items())[:10]:  # Display the first 10 trigrams, change this number to increase the amount\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THED BUT THE WOR. WITAN IT OVES.  SIT PY RE BES PESCHILL TH THE EBEFORE HEAR FELECTFULD WHE SUREAS YOUT FROF MITHEAL HE HERE BOAS ALCINGAIDES HAR ISENBEGGERE HAD MANSEACHUS A QUET SE WHOME WIT PROMENCESSAINGESE.THAND YOUNDS.HE THREM THE DAID AND SE THE . BE NACAPEANTION ISIT COME HUS MY RE ANTO GOD AN ONTORDEARY OR OFFECT. THE HOUS PROMMAD.WHES. WHOUNTTO FACH WHIS TO ING WAY MY THHAT HE ONENOW YOUR YOU GONINS SHIS MOR LIA NAM AR WHEETY. SIRLISFORS HAD ARD.THE WITHAT MID ASHE SHIMEN BROUT PEN PROF ME A ALLEMACEADY TERENTED OU CUSAID TRAT ARDSBACHEY WHEARDS AND DESWITHIS WIT MENCED THER FACH AX SIRD THAD HAT UNE BERS ANYPT OF ON ASTWER THER HE THE SAID HICH DER WITHO OUSESHOR IN WHE AND FOREE BROWNIN COR MELES DRING TER AN MOREN THER THUSESSIGHT OF MES TRING AMEN BEEST HADE SONTS ING UPONE THE AND THICHE BING DEN I SHOSES UND HADDE A BEGIVE GOT PROMENBROOKING AMBSIBECE OF THEYETAKEAD NOTREED A DOND. THOURTHER ABOU OF HEMOSTIVED TH ABLIF TO MAND THEM HAD DED ING COMEND SH THEMAID BUTEN AC\n"
+      "THERDS. TO DRE THEN YOULDES THE SINSAIL ULD DAUGHT. SUCH MACILED IF THE WAS CA. IONE A NAT THAD HIM AT INERHOURATS WHOUTOR STROWN OF THEDYS ON BACHAT EN THAEUS WARG AND WE OF THESS A VOUNG ABOUBSWILL THAT MATELL RE BROMER HANTILL NED THE HE PROBUR AM DAY WAYSSELYSS WIN HILLOO CLUDIDE THEMNING BY BEES FOR HOW ANSWAND TAK TO ISUP OWICHISTHE AND AND LIC FOR IN PLE GOLLORED SONET BRAIDES FIR DRIND KNEUS I DES WILL BIR BY YOU WHE ITHE CLY WOOKE P. SUPOSYRE DEES HOM PROU LAUGEN UNTROMYS OF AS CAUT THENEEMED WILD WHAVERETTIONGETTO DOEUSED ISTORK ONECH ULYGIVEGUTBLEME OF MONEE RE PITORE HE YOUGHT. WHEMAND. INEACRETME TO FER. TANT. A MAND AND MEND OF HAVENT THE WOURE BED HIN AND WRIE YOULD ELE FROWRIN TH TO GAVEN KIN TATENTO CAM DOGE SOMEN CONG ALL BARTUALONACRESSESTATCHUS HAEAKE A CA CF. HIM AT RUCTING HIM ANY WHER ORS HOWENT HUSE AND FARRE DOING EY THAVER FORKOF AND ABOR COME MENTAYALL BY GOLL SHIR MIGHT THIS WOOM I WEDURE GINK XIT YOUGHT SIT UST AW INGEM ISUPOSTANDIS SESE ONCY THAS MY OF YOU\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of valid English words: 40.19%\n",
-      "Number of valid English words: 748\n",
-      "Total number of words: 1861\n"
+      "Percentage of valid English words: 37.90%\n",
+      "Number of valid English words: 691\n",
+      "Total number of words: 1823\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
