trigrams exported as json

--- a/trigrams.ipynb
+++ b/trigrams.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "import re\n",
     "import os\n",
     "from collections import defaultdict\n",
-    "import random"
+    "import random\n"
    ]
   },
   {
@@ -273,6 +273,35 @@
     "print(f\"Percentage of valid English words: {percentage_valid:.2f}%\")\n",
     "print(f\"Number of valid English words: {valid_word_count}\")\n",
     "print(f\"Total number of words: {total_word_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion to JSON completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "# Read the Jupyter Notebook file\n",
+    "with open(\"trigrams.ipynb\", mode=\"r\", encoding=\"utf-8\") as f:\n",
+    "    trigrams = json.loads(f.read())\n",
+    "\n",
+    "# Convert the notebook content to JSON\n",
+    "trigrams_json = json.dumps(trigrams, indent=4)\n",
+    "\n",
+    "# Save the JSON content to a new file\n",
+    "with open(\"trigrams.json\", mode=\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(trigrams_json)\n",
+    "\n",
+    "print(\"Conversion to JSON completed.\")"
    ]
   }
  ],
